`/latest/@:atname/posts/:post_id` -> `/latest/posts/:post_id`
